Updated gradle build config